--- a/style.css
+++ b/style.css
@@ -1,14 +1,45 @@
 body{
-    background-color:#5A9367;
+    background-color:#548687;
 }
-h1{
-    color:#C16200;
-    font-family: Century;
-    
-}
+* {
+    margin:0; padding:0;
+  }
+  header {
+    width: 100%;
+    height: 200px;
+    padding: 5px 0;
+    text-align: center;
+    color: #FFFFF3;
+    background-image: url("/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/4e/00/4efc/UNADJUSTEDNONRAW_thumb_4efc.jpg");
+    background-position: center ;
+    background-size: cover;
+  }
+  header .headline{
+      line-height: 140px;
+      font-size: 50px;
+  }
+  .nav-list {
+      line-height: 20px;
+      list-style: none;
+      font-weight: bold;
+  }
+  .nav-list-item {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+  }    
+
+contents{
+    width: 30px;
+    height: 50px;
+    padding: 5px 0;
+    text-align: center;
+}    
 h2{
     color:#C16200;
     font-family: Century;
+    font-size:6;
+    margin:100px 70px 30px 70px;
 }
 p{
     color:#FFFFF3;
@@ -17,6 +48,9 @@ p{
 .div3{
     color:#FFFFF3;
     font-family: Century;
+}
+.div4{
+    image: size 10px;
 }
 .footer{
     background-color: #C16200;
@@ -38,4 +72,15 @@ li{
     list-style:none;
     color:#FFFFF3;
     font-family: Century;
+}
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: #174a5c;
+    color: white;
+    text-align: center;
+    margin:500px 0px 0px 0px;
+}
+ul.footer-menu li {
+display: inline;
 }
