--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     padding: 5px 0;
     text-align: center;
     color: #FFFFF3;
-    background-image: url("/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/4e/00/4efc/UNADJUSTEDNONRAW_thumb_4efc.jpg");
+    background-image: url(" https://rina087.github.io/IMG_1791.jpeg");
     background-position: center ;
     background-size: cover;
   }
