--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     padding: 5px 0;
     text-align: center;
     color: #FFFFF3;
-    background-image: url("/Users/ririn087/Desktop/Waffle-Camp2/index写真/旧安祥寺川.jpeg");
+    background-image: url("/index写真/旧安祥寺川.jpeg");
     background-position: center ;
     background-size: cover;
   }
