--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
   header .headline{
       line-height: 140px;
       font-size: 50px;
-      font-family: "Hannari";
+      font-family: 'Sawarabi Mincho', sans-serif;
   }
   .nav-list {
       line-height: 20px;
@@ -44,17 +44,17 @@ contents{
 }    
 h2{
     color:#C16200;
-    font-family: "Hannari";
+    font-family: 'Sawarabi Mincho', sans-serif;
     font-size:6;
     margin:100px 70px 30px 70px;
 }
 p{
     color:#FFFFF3;
-    font-family: "Hannari";
+    font-family: 'Sawarabi Mincho', sans-serif;
 }
 .div3{
     color:#FFFFF3;
-    font-family: "Hannari";
+    font-family: 'Sawarabi Mincho', sans-serif;
 }
 .div4{
     image: size 10px;
@@ -65,12 +65,12 @@ p{
 }
 ul{
     color:#FFFFF3;
-    font-family: "Hannari";
+    font-family: 'Sawarabi Mincho', sans-serif;
 }
 li{
     list-style:none;
     color:#FFFFF3;
-    font-family: "Hannari";
+    font-family: 'Sawarabi Mincho', sans-serif;
 }
 footer{
     width: 100%;
