--- a/style-english.css
+++ b/style-english.css
@@ -1,85 +1,102 @@
-body{
-    background-color:#548687;
+body {
+  background-color: #548687;
 }
+
 * {
-    margin:0; padding:0;
-  }
-  header {
-    width: 100%;
-    height: 200px;
-    padding: 5px 0;
-    text-align: center;
-    color: #FFFFF3;
-    background-image: url("/index写真/旧安祥寺川.jpeg");
-    background-position: center ;
-    background-size: cover;
-  }
-  header .headline{
-      line-height: 140px;
-      font-size: 50px;
-      font-family: 'Amatic SC', cursive;
-  }
-  .nav-list {
-      line-height: 20px;
-      list-style: none;
-      font-weight: bold;
-  }
-  .nav-list-item {
-    list-style: none;
-    display: inline-block;
-    margin: 0 20px;
-  }    
-  .nav-list-item2{
-      list-style:none;
-      display:inline;
-      text-align:right;
-      font-size: 25px;
-      letter-spacing: 0px;
-  }
-contents{
-    width: 30px;
-    height: 50px;
-    padding: 5px 0;
-    text-align: center;
-}    
-h2{
-    color:#C16200;
-    font-family: "Hannari";
-    font-size:6;
-    margin:100px 70px 30px 70px;
+  margin: 0;
+  padding: 0;
 }
-p{
-    color:#FFFFF3;
-    font-family: "Hannari";
+
+header {
+  width: 100%;
+  height: 200px;
+  padding: 5px 0;
+  text-align: center;
+  color: #FFFFF3;
+  background-image: url("/index写真/旧安祥寺川.jpeg");
+  background-position: center;
+  background-size: cover;
 }
-.div3{
-    color:#FFFFF3;
-    font-family: "Hannari";
+
+header .headline {
+  line-height: 140px;
+  font-size: 50px;
+  font-family: 'Amatic SC', cursive;
 }
-.div4{
-    image: size 10px;
+
+.nav-list {
+  line-height: 20px;
+  list-style: none;
+  font-weight: bold;
 }
-.footer{
-    background-color: #C16200;
-    margin: -3px;
+
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
-ul{
-    color:#FFFFF3;
-    font-family: "Hannari";
+
+.nav-list-item2 {
+  list-style: none;
+  display: inline;
+  text-align: right;
+  font-size: 25px;
+  letter-spacing: 0px;
 }
-li{
-    list-style:none;
-    color:#FFFFF3;
-    font-family: "Hannari";
+
+contents {
+  width: 30px;
+  height: 50px;
+  padding: 5px 0;
+  text-align: center;
 }
-footer{
-    width: 100%;
-    height: 100px;
-    background-color: #174a5c;
-    color: white;
-    text-align: center;
-    margin:500px 0px 0px 0px;
+
+h2 {
+  color: #C16200;
+  font-family: "Hannari";
+  font-size: 6;
+  margin: 100px 70px 30px 70px;
 }
+
+p {
+  color: #FFFFF3;
+  font-family: "Hannari";
+}
+
+.div3 {
+  color: #FFFFF3;
+  font-family: "Hannari";
+}
+
+.div4 {
+  image: size 10px;
+}
+
+.footer {
+  background-color: #C16200;
+  margin: -3px;
+}
+
+ul {
+  color: #FFFFF3;
+  font-family: "Hannari";
+}
+
+li {
+  list-style: none;
+  color: #FFFFF3;
+  font-family: "Hannari";
+}
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #174a5c;
+  color: white;
+  text-align: center;
+  margin: 500px 0px 0px 0px;
+}
+
 ul.footer-menu li {
-display: inline;
+  display: inline;
 }
