--- a/style-english.css
+++ b/style-english.css
@@ -44,9 +44,7 @@ header .headline {
   letter-spacing: 0px;
 }
 
-contents {
-  width: 30px;
-  height: 50px;
+main {
   padding: 5px 0;
   text-align: center;
 }
