--- a/style2.css
+++ b/style2.css
@@ -36,9 +36,7 @@ header .headline {
   margin: 0 20px;
 }
 
-contents {
-  width: 30px;
-  height: 50px;
+main {
   padding: 5px 0;
   text-align: center;
 }
